@@ -1,3 +1,9 @@
+2020-03-08 Philipp Klaus Krause <pkk AT spth.de>
+
+	* index.php,
+	  previous.php:
+	  Announce SDCC 4.2.0 release.
+
 2020-02-28 Philipp Klaus Krause <pkk AT spth.de>
 
 	* index.php,
